fix: header z-index

--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -73,7 +73,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.6;
+  line-height: 1.8;
   color: #677788;
   text-align: left;
   background-color: #fff;
